# shikigami

./: .gitignore  LICENSE  README.ja.md  README.md  README.vi.md  README.zh-CN.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
characters/fili/: LICENSE  manifest.json
characters/fili/assets/states/idle/: FILI_FINAL.cdi3.json  FILI_FINAL.moc3  FILI_FINAL.model3.json  FILI_FINAL.physics3.json  frame_00.model3.json
characters/haru/: LICENSE  README.md  manifest.json
characters/haru/assets/states/idle/: frame_00.model3.json
characters/hiyori/: README.md  manifest.json
characters/hiyori-blue/: README.md  manifest.json
characters/hiyori-pink/: LICENSE  README.md  manifest.json
characters/hiyori/assets/states/focused/: frame_00.model3.json
characters/linh/: LICENSE  README.md  manifest.json
characters/linh-pixel/: LICENSE  README.md  manifest.json
characters/linh-pixel/src/: generate.py
characters/mao/: LICENSE  README.md  manifest.json
docs/: CHARACTER-PLAYBOOK.md  CONFIG.md  CONTRIBUTING.md  PIPELINE.md  PRD.md  TDD.md  WINDOWS-SIGNING.md  WINDOWS-UTM-SMOKE-TEST.md  codex-ui-prompts.md
docs/adr/: 000-licensing-protocol-strategy.md  001-event-transport.md  002-signal-source.md  003-character-package-format.md  004-v1-scope-sprite-only-mac-first.md  README.md
docs/character/: linh-commission-brief.md  linh-keyframe-prompts.md  linh-moodboard.md
docs/debates/2026-04-22-signal-source/: 00-arena-rules.md  01-position-A-event-driven-primary-opus.md  02-position-B-text-parse-primary-sonnet.md  03-position-C-equal-hybrid-gemini.md  04-position-D-llm-classifier-opus-proxy.md  05-synthesis-verdict.md
docs/debates/2026-05-03-v04-research-later-feasibility/: context.md  synthesis.md
docs/debates/2026-05-03-v04-research-later-feasibility/rounds/: r001_claude.md  r001_codex.md  r001_gemini.md  r001_sonnet.md  r002_claude.md  r002_codex.md  r002_gemini.md
docs/research/: 260422-airi-reusability-analysis.md  260423-live2d-pixi-v8.md
docs/reviews/: PRD-v0.1-adversarial-review.md
hooks/: README.md  shikigami-hook.ps1  shikigami-hook.py  shikigami-windsurf-dumper.py
plans/reports/: researcher-260502-0814-ai-tool-adapter-survey.md
public/: characters
schemas/: event.v1.0.json  manifest.v1.0.json
scripts/: e2e-test.sh  fetch-fili-vtuber.sh  fetch-hiyori-sample.sh  fetch-live2d-sample.sh  install-hook.py  pack-shikigami.sh  reskin-character.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: capture.rs  demo.rs  lib.rs  main.rs  passthrough.rs  session.rs  tray.rs
src-tauri/src/character/: installer.rs  loader.rs  manifest.rs  mod.rs  registry.rs  watcher.rs
src-tauri/src/config/: mod.rs  paths.rs  settings.rs
src-tauri/src/event/: auth.rs  mod.rs  schema.rs  server.rs
src-tauri/src/state/: announcements.rs  canonical.rs  dampen.rs  idle_timer.rs  machine.rs  mod.rs  texture.rs
src-tauri/src/tts/: cleanup.rs  elevenlabs.rs  mod.rs  openai.rs  piper.rs  provider.rs  say_macos.rs
src-tauri/tests/: event_server_integration.rs  session_persistence.rs
src/components/: character-stage.tsx  settings-modal.tsx  speech-bubble.tsx
src/ipc/: commands.ts
src/renderer/: live2d-renderer.ts  sprite-renderer.ts
(+7 files in other folders)
