[package]
name = "shikigami"
version = "0.1.0-alpha.0"
description = "A summoned desktop companion that reflects your AI agent's real-time state."
authors = ["hoangperry"]
edition = "2021"
license = "MIT"
repository = "https://github.com/hoangperry/shikigami"
default-run = "shikigami"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon"] }
tauri-plugin-fs = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
# by default Tauri runs in dev mode;
# this feature is used to reduce the size of Tauri in release.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
