[package]
name = "shikigami"
version = "0.1.0-alpha.0"
description = "A summoned desktop companion that reflects your AI agent's real-time state."
authors = ["hoangperry"]
edition = "2021"
license = "MIT"
repository = "https://github.com/hoangperry/shikigami"
default-run = "shikigami"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2.1", features = ["macos-private-api", "tray-icon", "protocol-asset"] }
tauri-plugin-fs = "2.2"
# Native open-file picker for the .shikigami install button.
tauri-plugin-dialog = "2"
# Persists window position + size across launches so the user doesn't lose
# their preferred placement. Saves to OS data dir, restores on next start.
tauri-plugin-window-state = "2"

# Async runtime + HTTP server
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# Serialization + schema
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Text processing (texture extraction)
regex = "1"
once_cell = "1"

# Auth + crypto
hex = "0.4"
rand = "0.8"
subtle = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors
anyhow = "1"
thiserror = "2"

# Directories
dirs = "5"

# HTTP client for cloud TTS providers (OpenAI, ElevenLabs).
# rustls-tls keeps the binary lean and works on macOS without OpenSSL.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# UUIDs for unique TTS output filenames.
uuid = { version = "1", features = ["v4"] }

# Base64 for ElevenLabs/OpenAI multipart audio response handling.
base64 = "0.22"

# `async fn` inside trait — used by tts::TtsProvider.
async-trait = "0.1"

# Filesystem watcher for character hot-reload (#15).
notify = { version = "6", default-features = false, features = ["macos_kqueue"] }
notify-debouncer-mini = { version = "0.4", default-features = false }

# `.shikigami` zip package extraction (#14).
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "test-util"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
